# directory-sizes

./: .gitignore  README.md  common.py  config.py  directory_sizes.py  directory_sizes_gui.py  main.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py  pyproject.toml  requirements.txt  setup.py
src/directory_sizes/: __init__.py  common.py  config.py  dir_size_bytes.py  main.py  mainwindow.py
